# simple-faster-rcnn

./: .gitignore  README.md  engine.py  predict.py  train.py  utils.py
export/: CMakeLists.txt  detection.cpp
models/: _utils.py  backbone_utils.py  faster_rcnn.py  generalized_rcnn.py  image_list.py  keypoint_rcnn.py  mask_rcnn.py  retinanet.py  roi_heads.py  rpn.py  transform.py
ops/: _register_onnx_ops.py  boxes.py  deform_conv.py  feature_pyramid_network.py  misc.py  new_empty_tensor.py  poolers.py  ps_roi_align.py  ps_roi_pool.py  roi_align.py  roi_pool.py
test/: test_onnx.py
